gcpcloud/test_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-container
  template:
    metadata:
      labels:
        app: test-container
    spec:
      containers:
      - name: testservicecontainer
        image: curlimages/curl:latest
        command: ["sleep", "infinitys"]
