gcpcloud/add_rating.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addrating-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedme
  template:
    metadata:
      labels:
        app: feedme
    spec:
      containers:
      - name: addratingcontainer
        image: europe-west1-docker.pkg.dev/agisit-2425-website-26/feedmerepo/addrating:1 
        ports:
        - containerPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  name: addrating-service
  labels:
    app: feedme
spec:
  type: NodePort  # Change to LoadBalancer if you want external access
  selector:
    app: feedme  # This should match the label in your deployment
  ports:
    - port: 3001            # The port that will be exposed
      targetPort: 3001
