gcpcloud/add_restaurant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addrestaurant-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: addrestaurant
  template:
    metadata:
      labels:
        app: addrestaurant
    spec:
      containers:
      - name: addrestaurantcontainer 
        image: europe-west1-docker.pkg.dev/agisit-2425-website-26/feedmerepo/addrestaurant:latest
        ports:
        - containerPort: 3004
---

apiVersion: v1
kind: Service
metadata:
  name: addrestaurant-service
  labels:
    app: addrestaurant
spec:
  type: ClusterIP  # Change to LoadBalancer if you want external access
  selector:
    app: addrestaurant  # This should match the label in your deployment
  ports:
    - protocol: TCP
      port: 3004            # The port that will be exposed
      targetPort: 3004      # The port on the container that will receive traffic
