gcpcloud/display_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: displayservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedme
  template:
    metadata:
      labels:
        app: feedme
    spec:
      containers:
      - name: displayservicecontainer
        image: europe-west1-docker.pkg.dev/agisit-2425-website-26/feedmerepo/displayservice:1  
        ports:
        - containerPort: 3002
---

apiVersion: v1
kind: Service
metadata:
  name: displayservice-service
  labels:
    app: feedme
spec:
  type: NodePort  # Change to LoadBalancer if you want external access
  selector:
    app: feedme  # This should match the label in your deployment
  ports:
    - port: 3002            # The port that will be exposed
      targetPort: 3002
