gcpcloud/feedme_database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0  
        ports:
        - containerPort: 3306  
      volumes:
      
      

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: NodePort  
  selector:
    app: mysql
  ports:
  - port: 3306 
    targetPort: 3306  
    nodePort: 30001
