gcpcloud/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontendcontainer
        image: europe-west1-docker.pkg.dev/agisit-2425-website-26/feedmerepo/frontend:latest 
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  type: NodePort  # Change to LoadBalancer if you want external access
  selector:
    app: frontend  # This should match the label in your deployment
  ports:
    - port: 80            # The port that will be exposed
      targetPort: 80
      nodePort: 32000
