gcpcloud/prometheus.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.37.0  # Official Prometheus image
        ports:
        - containerPort: 9090  # Default Prometheus port inside the container
        volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus/
      volumes:
      - name: prometheus-config-volume
        configMap:
          name: prometheus-config

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    app: prometheus
spec:
  type: NodePort  # Exposes the service on a port of each Node in the cluster
  ports:
  - port: 9090        # Port that the service will expose
    targetPort: 9090  # Port that the container listens on
    nodePort: 30008     # Port to access the service externally
  selector:
    app: prometheus
