gcpcloud/ansible_allow_all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-traffic
  namespace: default  
spec:
  podSelector: {}  
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}  
  egress:
    - to:
        - podSelector: {}
